--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PeerPong (insane project name ikr)</title>
-    <link rel="stylesheet" href="style.css">
+    <title>PeerPong</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-   <h1>PeerPong (insane project name ikr)</h1>
+    <h1>PeerPong</h1>
+    <canvas id="gameCanvas" width="800" height="400"></canvas>
     <div id="output"></div>
     <script type="module" src="main.js"></script>
 </body>
-
 </html>
